feat: update stub server and yaml document
