# stub/swagger_server/models/user_login_body.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class UserLoginBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, username: str=None, password: str=None):  # noqa: E501
+        """UserLoginBody - a model defined in Swagger
+
+        :param username: The username of this UserLoginBody.  # noqa: E501
+        :type username: str
+        :param password: The password of this UserLoginBody.  # noqa: E501
+        :type password: str
+        """
+        self.swagger_types = {
+            'username': str,
+            'password': str
+        }
+
+        self.attribute_map = {
+            'username': 'username',
+            'password': 'password'
+        }
+        self._username = username
+        self._password = password
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UserLoginBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The user_login_body of this UserLoginBody.  # noqa: E501
+        :rtype: UserLoginBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def username(self) -> str:
+        """Gets the username of this UserLoginBody.
+
+
+        :return: The username of this UserLoginBody.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username: str):
+        """Sets the username of this UserLoginBody.
+
+
+        :param username: The username of this UserLoginBody.
+        :type username: str
+        """
+        if username is None:
+            raise ValueError("Invalid value for `username`, must not be `None`")  # noqa: E501
+
+        self._username = username
+
+    @property
+    def password(self) -> str:
+        """Gets the password of this UserLoginBody.
+
+
+        :return: The password of this UserLoginBody.
+        :rtype: str
+        """
+        return self._password
+
+    @password.setter
+    def password(self, password: str):
+        """Sets the password of this UserLoginBody.
+
+
+        :param password: The password of this UserLoginBody.
+        :type password: str
+        """
+        if password is None:
+            raise ValueError("Invalid value for `password`, must not be `None`")  # noqa: E501
+
+        self._password = password
