# stub/swagger_server/swagger/swagger.yaml
@@ -70,6 +70,38 @@ paths:
                   $ref: "#/components/schemas/LogItem"
                 x-content-type: application/json
       x-openapi-router-controller: swagger_server.controllers.default_controller
+  /user/register:
+    post:
+      summary: Register a new user
+      operationId: controller_user_register
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/user_register_body"
+        required: true
+      responses:
+        "200":
+          description: User registered successfully
+        "400":
+          description: Bad request
+      x-openapi-router-controller: swagger_server.controllers.default_controller
+  /user/login:
+    post:
+      summary: Login a user
+      operationId: controller_user_login
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/user_login_body"
+        required: true
+      responses:
+        "200":
+          description: User logged in successfully
+        "400":
+          description: Bad request
+      x-openapi-router-controller: swagger_server.controllers.default_controller
 components:
   schemas:
     Latest:
@@ -91,8 +123,8 @@ components:
         user_id: 0
         sleep_id: 6
         heartrate: 5
-        temperature: 1.4658129805029452
-        humidity: 5.962133916683182
+        temperature: 1.46581298050294517310021547018550336360931396484375
+        humidity: 5.962133916683182377482808078639209270477294921875
         ts: ts
     Efficiency:
       type: object
@@ -116,12 +148,12 @@ components:
           type: number
           description: Predicted sleep efficiency
       example:
-        deep: 1.4658129805029452
-        efficiency: 5.637376656633329
-        light: 0.8008281904610115
+        deep: 1.46581298050294517310021547018550336360931396484375
+        efficiency: 5.63737665663332876420099637471139430999755859375
+        light: 0.80082819046101150206595775671303272247314453125
         smoke: true
         exercise: 5
-        rem: 6.027456183070403
+        rem: 6.02745618307040320615897144307382404804229736328125
     LogItem:
       type: object
       properties:
@@ -141,7 +173,40 @@ components:
         user_id: 0
         sleep_id: 6
         heartrate: 5
-        temperature: 1.4658129805029452
-        humidity: 5.962133916683182
+        temperature: 1.46581298050294517310021547018550336360931396484375
+        humidity: 5.962133916683182377482808078639209270477294921875
         ts: ts
+    user_register_body:
+      required:
+      - age
+      - exercise
+      - gender
+      - password
+      - smoke
+      - username
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+        age:
+          type: integer
+        gender:
+          type: string
+          example: '`male` or `female` only'
+        smoke:
+          type: boolean
+        exercise:
+          type: integer
+    user_login_body:
+      required:
+      - password
+      - username
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
 
